[4.0] RTL: fix media info alignment (#29483)

--- a/administrator/components/com_media/resources/styles/components/_media-infobar.scss
+++ b/administrator/components/com_media/resources/styles/components/_media-infobar.scss
@@ -83,6 +83,7 @@ html[dir=rtl] .media-infobar dd {
   margin-right: 0;
   margin-left: auto;
   direction: ltr;
+  text-align: right;
 }
 html[dir=rtl] .media-infobar h2 {
   padding: 20px $gutter-width 10px 0;
